--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -480,9 +480,8 @@ h6,
 #header1-45 .mbr-section-title {
   font-family: 'Montserrat', sans-serif;
 }
-#msg-box8-5r .mbr-section-title,
-#msg-box8-5r p {
-  color: #fff;
+#msg-box4-5t .btn {
+  font-size: 14px;
 }
 #header3-50 .mbr-section-title,
 #header3-50 .mbr-section-subtitle {
