--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -487,6 +487,7 @@ h6,
 #msg-box8-60 .mbr-section-title {
   text-align: center;
   font-size: 48px;
+  color: #000000;
 }
 #header3-50 .mbr-section-title,
 #header3-50 .mbr-section-subtitle {
