--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -487,7 +487,7 @@ h6,
 #msg-box8-63 .mbr-section-title {
   text-align: center;
   font-size: 48px;
-  color: #ffffff;
+  color: #000000;
 }
 #header3-50 .mbr-section-title,
 #header3-50 .mbr-section-subtitle {
