--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2170,3 +2170,67 @@ h6,
 #ext_menu-2o .dropdown-item[aria-expanded="true"] {
   color: #c0a375!important;
 }
+
+#ext_menu-6c .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-6c .navbar-caption {
+  color: #ffffff;
+  font-size: 13px;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
+}
+#ext_menu-6c .navbar-toggler {
+  color: #ffffff;
+}
+#ext_menu-6c .close-icon::before,
+#ext_menu-6c .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-6c .link,
+#ext_menu-6c .dropdown-item {
+  color: #ffffff;
+}
+#ext_menu-6c .link {
+  font-size: 0.75rem;
+}
+#ext_menu-6c .dropdown-item,
+#ext_menu-6c .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#ext_menu-6c .link:hover,
+#ext_menu-6c .dropdown-item:hover,
+#ext_menu-6c .link:focus,
+#ext_menu-6c .dropdown-item:focus {
+  color: #c0a375;
+}
+#ext_menu-6c .link[aria-expanded="true"],
+#ext_menu-6c .dropdown-menu {
+  background: #0e0e0e;
+}
+#ext_menu-6c .nav-dropdown-sm .link:focus,
+#ext_menu-6c .nav-dropdown-sm .link:hover,
+#ext_menu-6c .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-6c .nav-dropdown-sm .dropdown-item:hover {
+  background: #202020!important;
+}
+#ext_menu-6c .navbar,
+#ext_menu-6c .nav-dropdown-sm,
+#ext_menu-6c .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-6c .nav-dropdown-sm .dropdown-menu {
+  background: #282828;
+}
+#ext_menu-6c .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-6c .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-6c .bg-color.transparent.opened .link:hover,
+#ext_menu-6c .bg-color.transparent.opened .link:focus {
+  color: #c0a375;
+}
+#ext_menu-6c .link[aria-expanded="true"],
+#ext_menu-6c .dropdown-item[aria-expanded="true"] {
+  color: #c0a375!important;
+}
